--- a/setup.cfg
+++ b/setup.cfg
@@ -6,7 +6,7 @@ versionfile_build = fidesctl/_version.py
 tag_prefix =
 parentdir_prefix =
 
-[mypy] 
+[mypy]
 show_error_codes = True
 check_untyped_defs = True
 disallow_any_explicit = True
@@ -20,6 +20,9 @@ plugins = pydantic.mypy
 warn_redundant_casts = True
 warn_unused_configs = True
 warn_unused_ignores = True
+
+[mypy-tests.*]
+disallow_untyped_defs = False
 
 [pydantic-mypy]
 init_forbid_extra = True
