Run make target to build docs in pr checks (#488)
* Run make target to build docs in pr checks

* Fix pr checks workflows typo

* Attempt to build with no deps

* Fix target name

* Remove build-local from target

* Create separate ci job to check docs in parallel

* Add optional dependencies to docs workflows

* Remove pinned python version from docs workflows

* Add Dockerfile dependencies for docs server

* Remove earmenda branch from docs publish done testing

* Fix merge conflicts

* Fix path issues after merge

* Temporarily test publish-docs in this PR

* Remove testing branch from workflow

* build the docs in addition to the auto-generated docs

* fix the mkdocs build command

* add a build docs step that doesn't build-local first

* add separate CI jobs for the docs build

Co-authored-by: Eduardo Armendariz <eduardo@ethyca.com>
Co-authored-by: ThomasLaPiana <thomas.lapiana@pm.me>

--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -101,6 +101,25 @@ jobs:
       - name: Run formatter
         run: make black
 
+  Docs:
+    needs: Build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Download fidesctl container
+        uses: actions/download-artifact@v2
+        with:
+          name: ${{ env.CONTAINER }}
+          path: /tmp/
+
+      - name: Load fidesctl image
+        run: docker load --input /tmp/${{ env.CONTAINER }}.tar
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Check that the docs can build
+        run: make docs-check
+
   Pylint:
     needs: Build
     runs-on: ubuntu-latest
