--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -62,7 +62,6 @@ jobs:
       - name: Scan fidesctl db
         run: make fidesctl-db-scan
 
-
   isort:
     needs: Build
     runs-on: ubuntu-latest
@@ -80,7 +79,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run sorter
-        run: make isort
+        run: nox -s isort
 
   Black:
     needs: Build
@@ -99,7 +98,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run formatter
-        run: make black
+        run: nox -s black
 
   Docs:
     needs: Build
