--- a/.github/workflows/pr_checks.yml
+++ b/.github/workflows/pr_checks.yml
@@ -126,7 +126,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Check that the docs can build
-        run: make docs-check
+        run: nox -s docs_check
 
   Pylint:
     needs: Build
@@ -145,7 +145,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run linter
-        run: make pylint
+        run: nox -s pylint -- docker
 
   Mypy:
     needs: Build
@@ -164,7 +164,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run typechecker
-        run: make mypy
+        run: nox -s mypy -- docker
 
   Xenon:
     needs: Build
@@ -183,7 +183,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run cyclomatic complexity check
-        run: make xenon
+        run: nox -s xenon -- docker
 
   Pytest-Unit:
     needs: Build
@@ -202,7 +202,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run unit test suite
-        run: make pytest-unit
+        run: nox -s pytest_unit
 
   Pytest-Integration:
     needs: Build
@@ -221,7 +221,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run integration test suite
-        run: make pytest-integration
+        run: nox -s pytest_integration
 
   Pytest-External:
     needs: Build
@@ -240,7 +240,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Run external test suite
-        run: make pytest-external
+        run: nox -s pytest_external
         env:
           SNOWFLAKE_FIDESCTL_PASSWORD: ${{ secrets.SNOWFLAKE_FIDESCTL_PASSWORD }}
           REDSHIFT_FIDESCTL_PASSWORD: ${{ secrets.REDSHIFT_FIDESCTL_PASSWORD }}
