update the workflows to install nox first, implement all ci checks in nox

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -26,7 +26,7 @@ jobs:
           password: ${{ env.DOCKER_TOKEN }}
 
       - name: Build Fidesctl
-        run: make build
+        run: nox -s build
 
       - name: Push Fidesctl
-        run: make push
+        run: nox -s push
