--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -34,7 +34,7 @@ jobs:
         run: git fetch origin gh-pages --depth=1
 
       - name: Build docs
-        run: make docs-build
+        run: nox -s docs_build_local
 
       # This is required by "mike"
       - name: Set the Git Username & Email
