Replace the Makefile with a noxfile.py (#533)
* Replace the Makefile with a noxfile.py

* get some commands set up in the nox file for testing

* get `nox -s api` working and set up `nox --list` as the default command

* check in

* all of the dev commands are working, further cleanup

* got the docs targets working

* start adding the CI section to nox and updating the PR checks workflow

* have a version of the black check that runs in docker, install nox as part of the PR checks

* bump versions that were breaking, set up the nox sessions to dynamic and run either locally or in docker

* move the fidesctl checks to nox

* organize the sessions into their own grouped files

* set the pr_checks to all use nox sessions, expecting failures

* update the workflows to install nox first, implement all ci checks in nox

* nox check_all is passing

* clean up code-level documentation

* add gitpython to dev requirements, update black and isort to accept the fix posarg

* update how the nox pytest session works, uncovered a failing test

* parametrize the pytest session, update the pr checks

* update the changelog

* fix the black session

* parametrize docs_build

Co-authored-by: ThomasLaPiana <thomas.lapiana@pm.me>

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -25,8 +25,11 @@ jobs:
           username: ${{ env.DOCKER_USER }}
           password: ${{ env.DOCKER_TOKEN }}
 
+      - name: Install Nox
+        run: pip install nox>=2022
+
       - name: Build Fidesctl
-        run: make build
+        run: nox -s build
 
       - name: Push Fidesctl
-        run: make push
+        run: nox -s push
