--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -26,7 +26,7 @@ jobs:
           password: ${{ env.DOCKER_TOKEN }}
 
       - name: Install Nox
-        run: pip install nox>=2022
+        run: pip install -r dev-requirements.txt
 
       - name: Build Fidesctl
         run: nox -s build
