--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -25,8 +25,8 @@ jobs:
           username: ${{ env.DOCKER_USER }}
           password: ${{ env.DOCKER_TOKEN }}
 
-      - name: Install Nox
-        run: pip install nox>=2022
+      - name: Install Dev Requirements
+        run: pip install -r dev-requirements.txt
 
       - name: Build Fidesctl
         run: nox -s build
