--- a/setup.cfg
+++ b/setup.cfg
@@ -6,12 +6,12 @@ versionfile_build = fidesctl/_version.py
 tag_prefix =
 parentdir_prefix =
 
-[mypy] 
+[mypy]
 show_error_codes = True
 check_untyped_defs = True
 disallow_any_explicit = True
 disallow_untyped_defs = True
-files = src/
+files = src/, tests/
 exclude = migrations/
 ignore_missing_imports = True
 no_implicit_reexport = True
