Add static build dir to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 fidesapi/src/main/resources/application.conf
 docs/fides/docs/api/openapi.json
 docs/fides/docs/schemas/config_schema.json
+fidesapi/build/static
 
 ## generic files to ignore
 *~
