--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: ethyca/fidesctl:local
     command: uvicorn --host 0.0.0.0 --port 8080 --reload fidesapi.main:app
     healthcheck:
-      test: [ "CMD", "curl", "-f", "http://0.0.0.0:8080/health" ]
+      test: [ "CMD", "curl", "-f", "http://0.0.0.0:8080/api/v1/health" ]
       interval: 15s
       timeout: 5s
       retries: 5
