--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -9,11 +9,6 @@ edit_uri: blob/main/docs/fides/docs/
 # Navigation
 nav:
   - What is Fides?: index.md
-  - Quick Start:
-      - Overview: quickstart/overview.md
-      - Running Fidesctl Locally (Standalone): quickstart/local_standalone.md
-      - Running Fidesctl Locally (Full Installation): quickstart/local_full.md
-      - Running Fidesctl in Docker: quickstart/docker.md
   - Installation:
       - Installation Overview: installation/installation.md
       - Prerequisites & Dependencies: installation/prerequisites_dependencies.md
@@ -21,6 +16,30 @@ nav:
       - Installation from Docker: installation/docker.md
       - Setting up the database: installation/database.md
       - Configuration: installation/configuration.md
+  - Generating Resources: guides/generate_resources.md
+  - Generating a Data Map: guides/generating_datamap.md
+  - Extending the Taxonomy: guides/extending_taxonomy.md
+  - CI/CD Integration:
+      - Overview: cicd/overview.md
+      - Example Integrations: cicd/examples.md
+  - Fides Resources:
+      - Overview: language/overview.md
+      - Organization: language/resources/organization.md
+      - Policy: 
+          - Policy: language/resources/policy.md
+          - Example Policies: guides/policies.md
+      - Registry: language/resources/registry.md
+      - System: language/resources/system.md
+      - Dataset: language/resources/dataset.md
+  - Fides Taxonomy:
+      - Overview: language/taxonomy/overview.md
+      - Taxonomy Explorer: language/taxonomy/explorer.md
+      - Data Categories: language/taxonomy/data_categories.md
+      - Data Uses: language/taxonomy/data_uses.md
+      - Data Subjects: language/taxonomy/data_subjects.md
+      - Data Qualifiers: language/taxonomy/data_qualifiers.md
+  - CLI: cli.md
+  - API: api/index.md
   - Tutorial:
       - Overview: tutorial/index.md
       - Add Fidesctl to the App: tutorial/add.md
@@ -29,33 +48,7 @@ nav:
       - Write a Policy: tutorial/policy.md
       - Add Google Analytics: tutorial/google.md
       - Manage Google Analytics with Fidesctl: tutorial/pass.md
-  - How-To Guides:
-      - Generating Resources: guides/generate_resources.md
-      - Example Policies: guides/policies.md
-      - Extending the Taxonomy: guides/extending_taxonomy.md
-      - Generating a Data Map: guides/generating_datamap.md
-  - CI/CD Integration:
-      - Overview: cicd/overview.md
-      - Example Integrations: cicd/examples.md
-  - Fides Language:
-      - Overview: language/overview.md
-      - Syntax: language/syntax.md
-      - Resources:
-          - Organization: language/resources/organization.md
-          - Policy: language/resources/policy.md
-          - Registry: language/resources/registry.md
-          - System: language/resources/system.md
-          - Dataset: language/resources/dataset.md
-      - Taxonomy:
-          - Overview: language/taxonomy/overview.md
-          - Taxonomy Explorer: language/taxonomy/explorer.md
-          - Data Categories: language/taxonomy/data_categories.md
-          - Data Uses: language/taxonomy/data_uses.md
-          - Data Subjects: language/taxonomy/data_subjects.md
-          - Data Qualifiers: language/taxonomy/data_qualifiers.md
-  - CLI: cli.md
-  - API: api/index.md
-  - Development:
+  - Contributing to Fides:
       - Overview: development/overview.md
       - Code Style: development/code_style.md
       - Database Migration: development/database_migration.md
