Remove nextjs dynamic features

--- a/clients/admin-ui/.eslintrc.json
+++ b/clients/admin-ui/.eslintrc.json
@@ -9,16 +9,29 @@
     "project": "./tsconfig.json"
   },
   "rules": {
-    "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
-    "react/jsx-props-no-spreading": [0],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [
+          ".tsx"
+        ]
+      }
+    ],
+    "react/jsx-props-no-spreading": [
+      0
+    ],
     "react/function-component-definition": [
       2,
       {
         "namedComponents": "arrow-function"
       }
     ],
+    // since we are using static site export
+    "@next/next/no-img-element": "off",
     // causes bug in re-exporting default exports, see
     // https://github.com/eslint/eslint/issues/15617
-    "no-restricted-exports": [0]
+    "no-restricted-exports": [
+      0
+    ]
   }
 }
