--- a/clients/admin-ui/.eslintrc.json
+++ b/clients/admin-ui/.eslintrc.json
@@ -5,10 +5,25 @@
     "prettier",
     "next/core-web-vitals"
   ],
+  "plugins": [
+    "simple-import-sort"
+  ],
+  "root": true,
   "parserOptions": {
     "project": "./tsconfig.json"
   },
   "rules": {
+    // causes bug in re-exporting default exports, see
+    // https://github.com/eslint/eslint/issues/15617
+    "no-restricted-exports": [
+      0
+    ],
+    "react/function-component-definition": [
+      2,
+      {
+        "namedComponents": "arrow-function"
+      }
+    ],
     "react/jsx-filename-extension": [
       1,
       {
@@ -20,18 +35,9 @@
     "react/jsx-props-no-spreading": [
       0
     ],
-    "react/function-component-definition": [
-      2,
-      {
-        "namedComponents": "arrow-function"
-      }
-    ],
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error",
     // since we are using static site export
-    "@next/next/no-img-element": "off",
-    // causes bug in re-exporting default exports, see
-    // https://github.com/eslint/eslint/issues/15617
-    "no-restricted-exports": [
-      0
-    ]
+    "@next/next/no-img-element": "off"
   }
 }
