--- a/clients/admin-ui/package.json
+++ b/clients/admin-ui/package.json
@@ -6,7 +6,7 @@
     "dev:mock": "echo '🚨 Running with mock API'; NEXT_PUBLIC_MOCK_API=true next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "eslint . --ext .ts,.tsx",
     "test": "jest --watch",
     "analyze": "cross-env ANALYZE=true next build",
     "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
@@ -26,6 +26,7 @@
     "@reduxjs/toolkit": "^1.8.0",
     "date-fns": "^2.28.0",
     "date-fns-tz": "^1.3.1",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "formik": "^2.2.9",
     "framer-motion": "^5",
     "lodash.debounce": "^4.0.8",
