Refactoring SaaS authentication in preparation for OAuth2 (#504)
Refactoring SaaS authentication in preparation for OAuth2

--- a/data/saas/config/hubspot_config.yml
+++ b/data/saas/config/hubspot_config.yml
@@ -10,13 +10,12 @@ saas_config:
 
   client_config:
     protocol: https
-    host:
-      connector_param: domain
+    host: <domain>
     authentication:
       strategy: query_param
       configuration:
-        token:
-          connector_param: hapikey
+        name: hapikey
+        value: <hapikey>
 
   test_request:
     method: GET
@@ -28,15 +27,16 @@ saas_config:
         read:
           path: /crm/v3/objects/contacts/search
           method: POST
-          body: '{
-            "filterGroups": [{
-              "filters": [{
-                "value": "<email>",
-                "propertyName": "email",
-                "operator": "EQ"
+          body: 
+            '{
+              "filterGroups": [{
+                "filters": [{
+                  "value": "<email>",
+                  "propertyName": "email",
+                  "operator": "EQ"
+                }]
               }]
-            }]
-          }'
+            }'
           query_params:
             - name: limit
               value: 100
@@ -55,9 +55,7 @@ saas_config:
         update:
           path: /crm/v3/objects/contacts/<contactId>
           method: PATCH
-          body: '{
-              <masked_object_fields>
-          }'
+          body: '{<masked_object_fields>}'
           param_values:
             - name: contactId
               references:
@@ -86,41 +84,6 @@ saas_config:
             configuration:
               source: body
               path: paging.next.link
-#    - name: marketing_emails
-#      requests:
-#        read:
-#          path: /marketing-emails/v1/emails
-#          method: GET
-#          query_params:
-#            - name: limit
-#              value: 100
-#            - name: offset
-#              value: 0
-#          param_values:
-#            - name: placeholder
-#              identity: email
-#          data_path: objects
-#          postprocessors:
-#            - strategy: filter
-#              configuration:
-#                field: authorEmail  # or email?
-#                value:
-#                  identity: email
-#          pagination:
-#            strategy: offset
-#            configuration:
-#              incremental_param: offset
-#              increment_by: 100
-#              limit: 10000
-#        update:
-#          path: marketing-emails/v1/emails/<emailId>
-#          method: PUT
-#          param_values:
-#            - name: emailId
-#              references:
-#                - dataset: hubspot_connector_example
-#                  field: marketing_emails.id
-#                  direction: from
     - name: subscription_preferences
       requests:
         read:
@@ -132,12 +95,13 @@ saas_config:
         update:
           path: /communication-preferences/v3/unsubscribe
           method: POST
-          body: '{
-            "emailAddress": "<email>",
-            "subscriptionId": "<subscriptionId>",
-            "legalBasis": "LEGITIMATE_INTEREST_CLIENT",
-            "legalBasisExplanation": "At users request, we opted them out"
-          }'
+          body:
+            '{
+              "emailAddress": "<email>",
+              "subscriptionId": "<subscriptionId>",
+              "legalBasis": "LEGITIMATE_INTEREST_CLIENT",
+              "legalBasisExplanation": "At users request, we opted them out"
+            }'
           data_path: subscriptionStatuses
           param_values:
             - name: email
@@ -152,43 +116,3 @@ saas_config:
               configuration:
                 field: status
                 value: SUBSCRIBED
-#    - name: users
-#      requests:
-#        read:
-#          path: /settings/v3/users/
-#          method: GET
-#          query_params:
-#            - name: limit
-#              value: 100
-#          param_values:
-#            - name: placeholder
-#              identity: email
-#          pagination:
-#            strategy: link
-#            configuration:
-#              source: body
-#              path: paging.next.link
-#          postprocessors:
-#            - strategy: unwrap
-#              configuration:
-#                data_path: results
-#            - strategy: filter
-#              configuration:
-#                field: email
-#                value:
-#                  identity: email
-#    - name: user_provisioning
-#      requests:
-#        read:
-#          path: /settings/v3/users/<userId>
-#          method: GET
-#          param_values:
-#            - name: userId
-#              references:
-#                - dataset: hubspot_connector_example
-#                  field: users.id
-#                  direction: from
-#            - name: placeholder
-#              identity: email
-
-
