SaaS connection documentation (#478)
Updating SaaS connector docs layout and stub in connectors guides

--- a/docs/fidesops/mkdocs.yml
+++ b/docs/fidesops/mkdocs.yml
@@ -18,10 +18,6 @@ nav:
       - Authenticate with OAuth: guides/oauth.md  
       - Connect SQL and NoSQL Databases: guides/database_connectors.md
       - Configure Datasets: guides/datasets.md
-      - Connect to SaaS Applications: guides/saas_connectors.md
-      - SaaS Configuration: guides/saas_config.md
-      - SaaS Post-Processors: guides/saas_postprocessors.md
-      - SaaS Pagination: guides/saas_pagination.md
       - Annotate Complex Fields: guides/complex_fields.md
       - Preview Query Execution: guides/query_execution.md  
       - Create Request Policies: guides/policies.md  
@@ -33,6 +29,17 @@ nav:
       - Configure OneTrust Integration: guides/onetrust.md  
       - Configuration Reference: guides/configuration_reference.md
       - Data Rights Protocol: guides/data_rights_protocol.md
+  - SaaS Connectors:
+      - Connect to SaaS Applications: saas_connectors/saas_connectors.md
+      - SaaS Configuration: saas_connectors/saas_config.md
+      - SaaS Post-Processors: saas_connectors/saas_postprocessors.md
+      - SaaS Pagination: saas_connectors/saas_pagination.md
+      - Connection Examples:
+        - Hubspot: saas_connectors/example_configs/hubspot.md
+        - Mailchimp: saas_connectors/example_configs/mailchimp.md
+        - Segment: saas_connectors/example_configs/segment.md
+        - Sentry: saas_connectors/example_configs/sentry.md
+        - Stripe: saas_connectors/example_configs/stripe.md
   - Fidesops UI:
       - Admin UI: guides/admin_ui.md
       - User Management: guides/user_management.md
