--- a/clients/admin-ui/package.json
+++ b/clients/admin-ui/package.json
@@ -34,6 +34,7 @@
     "next": "12.1.0",
     "next-auth": "^4.2.1",
     "next-redux-wrapper": "^7.0.5",
+    "prettier": "^2.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
