--- a/docs/fides/mkdocs.yml
+++ b/docs/fides/mkdocs.yml
@@ -108,6 +108,7 @@ markdown_extensions:
 
 extra_javascript:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/highlight.min.js
+  - js/matomo.js
 
 extra_css:
   - https://cdnjs.cloudflare.com/ajax/libs/highlight.js/10.7.2/styles/default.min.css
