Update cli tests for new database cases

--- a/tests/test_config.toml
+++ b/tests/test_config.toml
@@ -14,4 +14,4 @@ analytics_opt_out = true
 
 
 [credentials]
-postgres_1 = {connection_string="postgresql+psycopg2://fidesctl:fidesctl@my_cluster.com:5439/fidesctl_test"}
+postgres_1 = {connection_string="postgresql+psycopg2://postgres:fidesctl@fidesctl-db:5432/fidesctl_test"}
