--- a/tests/test_config.toml
+++ b/tests/test_config.toml
@@ -15,3 +15,4 @@ analytics_opt_out = true
 
 [credentials]
 postgres_1 = {connection_string="postgresql+psycopg2://postgres:fidesctl@fidesctl-db:5432/fidesctl_test"}
+okta_1 = {orgUrl="https://dev-78908748.okta.com", token="redacted_override_in_tests"}
