Frontend scaffolding (prettier, navbar, testing) (#679)
* Add import sorting, same as fidesops#9de2136

* Run import sorting

* Update changelog

* Use baseurl for easier imports

* Add prettier

* Simplify components via a Layout component

* Add testing to the NavBar

* Fix pluralization in routes

* Remove unused import

* Update changelog

* Revert "Update changelog"

This reverts commit c552049bc7aee5cda430fd67ad8a05264d3005f5.

* Fix path to page

* Add .prettierignore to leave the changelog alone

* Update changelog

* Remove any type

* Change import path shortcut from @ to ~

--- a/clients/admin-ui/.eslintrc.json
+++ b/clients/admin-ui/.eslintrc.json
@@ -5,33 +5,33 @@
     "prettier",
     "next/core-web-vitals"
   ],
+  "plugins": ["simple-import-sort"],
+  "root": true,
   "parserOptions": {
     "project": "./tsconfig.json"
   },
   "rules": {
-    "react/jsx-filename-extension": [
-      1,
-      {
-        "extensions": [
-          ".tsx"
-        ]
-      }
-    ],
-    "react/jsx-props-no-spreading": [
-      0
-    ],
+    // causes bug in re-exporting default exports, see
+    // https://github.com/eslint/eslint/issues/15617
+    "no-restricted-exports": [0],
     "react/function-component-definition": [
       2,
       {
         "namedComponents": "arrow-function"
       }
     ],
+    "react/jsx-filename-extension": [
+      1,
+      {
+        "extensions": [".tsx"]
+      }
+    ],
+    "react/jsx-props-no-spreading": [0],
+    "simple-import-sort/imports": "error",
+    "simple-import-sort/exports": "error",
     // since we are using static site export
     "@next/next/no-img-element": "off",
-    // causes bug in re-exporting default exports, see
-    // https://github.com/eslint/eslint/issues/15617
-    "no-restricted-exports": [
-      0
-    ]
+    // since defaultProps are deprecated for function components
+    "react/require-default-props": "off"
   }
 }
